--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       var copyLink = document.getElementById('copyLink');
       var label = document.querySelectorAll('label');
 
-      var resultSrc = '/Mail.html?title=' + encrypt(title.value) + '&description=' + encrypt(description.value)
+      var resultSrc = 'MaiL/Mail.html?title=' + encrypt(title.value) + '&description=' + encrypt(description.value)
 
       if (title.value && description.value) {
         result.src = resultSrc
