--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         console.log('load')
 
         console.log(title.value + description.value)
-        var resultSrc = '/Mail.html?title=' + encrypt(title.value) + '&description=' + encrypt(description.value)
+        var resultSrc = 'Mail.html?title=' + encrypt(title.value) + '&description=' + encrypt(description.value)
 
 
         if (title.value && description.value) {
