--- a/Mail.html
+++ b/Mail.html
@@ -27,6 +27,10 @@
     #title {
       font-weight: bold;
       font-size: 30px;
+
+      b {
+        font-size: 35px;
+      }
     }
   </style>
 </head>
