--- a/auth/signup.html
+++ b/auth/signup.html
@@ -47,6 +47,7 @@
             color: white;
             text-decoration: none;
             font-size: 14px;
+            width: fit-content;
             transition: all 0.5s ease;
 
             &:hover {
@@ -164,7 +165,7 @@
   </div>
 
   <script type="module">
-    import { signup } from '/module.js'
+    import { signup } from '../module.js'
 
     const form = document.getElementById('signup');
     const lUsername = document.querySelector('.label1');
