--- a/auth/login.html
+++ b/auth/login.html
@@ -41,12 +41,13 @@
           color: rgb(192, 192, 192);
           font-size: 12px;
           display: flex;
-            flex-direction: column;
-
+          flex-direction: column;
+          
           a {
             color: white;
             text-decoration: none;
             font-size: 14px;
+            width: fit-content;
             transition: all 0.5s ease;
 
             &:hover {
@@ -155,7 +156,7 @@
   </div>
 
   <script type="module">
-    import { login } from '/module.js'
+    import { login } from '../module.js'
 
     const form = document.getElementById('login');
 
