--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 </head>
 <body>
   <div class="acc-container">
-    <img src="/asset/setting.svg" alt="ini setting" id="svgSetting">
+    <img src="./asset/setting.svg" alt="ini setting" id="svgSetting">
   </div>
   <div class="list" id="listBtn">
     <div class="list-btn">
