--- a/Mail.html
+++ b/Mail.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mail</title>
+  <link rel="icon" href="./asset/favico_mf9_icon.ico" type="image/x-icon">
+  <link rel="icon" href="./asset/favico.png" type="image/png">
+  <link rel="icon" href="./asset/favico.svg" type="image/svg+xml">
   <style>
+    * {
+      font-family: 'Times New Roman', Times, serif;
+    }
+
     body {
       background-color: #fff;
       margin: 0;
@@ -81,7 +88,7 @@
           author.innerHTML = 'Author: ' + (data.author != 'anonymous' ? displayName : 'anonymous');
         }
       } catch (error) {
-        console.error('Error:', error.message);
+        console.error('Error:', error);
       }
     })();
 
