--- a/auth/signup.html
+++ b/auth/signup.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
+  <link rel="icon" href="./asset/favico_mf9_icon.ico" type="image/x-icon">
+  <link rel="icon" href="./asset/favico.png" type="image/png">
+  <link rel="icon" href="./asset/favico.svg" type="image/svg+xml">
   <style>
     * {
       font-family: monospace;
@@ -208,7 +211,7 @@
           }, 3000);
         }
       } catch (error) {
-        console.error('Error:', error.message);
+        console.error('Error:', error);
       }
     }
 
