--- a/auth/login.html
+++ b/auth/login.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="icon" href="./asset/favico_mf9_icon.ico" type="image/x-icon">
-  <link rel="icon" href="./asset/favico.png" type="image/png">
-  <link rel="icon" href="./asset/favico.svg" type="image/svg+xml">
+  <link rel="icon" href="../asset/favico_mf9_icon.ico" type="image/x-icon">
+  <link rel="icon" href="../asset/favico.png" type="image/png">
+  <link rel="icon" href="../asset/favico.svg" type="image/svg+xml">
   <style>
     * {
       font-family: monospace;
