--- a/index.html
+++ b/index.html
@@ -601,14 +601,12 @@
     };
 
     async function loadList() {
-      try {
+      // try {
 
-      } catch (error) {
+      // } catch (error) {
         
-      }
-      const data = await getAllMessage();
-
-
+      // }
+      // const data = await getAllMessage();
     }
 
     function togglePage() {
