--- a/Mail.html
+++ b/Mail.html
@@ -28,6 +28,8 @@
 
       * {
         text-align: center;
+        overflow-wrap: break-word;
+        word-break: break-all;
       }
     }
 
@@ -58,7 +60,7 @@
   </div>
 
   <script type="module">
-    import { readData, getAuthor } from './module.js'
+    import { readData, getAuthor, decrypt } from './module.js'
 
     const url = window.location.search
     var param = url.replace(/&amp;/g, '&').replace(/%20/g, ' ').slice(1).split('&')
@@ -92,11 +94,7 @@
       }
     })();
 
-    function decrypt(text) {
-      var ununicode = text.split('g').map(uni => String.fromCodePoint(parseInt(uni, 16)));
-
-      return ununicode.join('');
-    }
+    
   </script>
 </body>
 </html>
