--- a/auth/signup.html
+++ b/auth/signup.html
@@ -97,7 +97,7 @@
           background-color: transparent;
           border: none;
           font-weight: bold;
-          transition: all 0.3s ease;
+          transition: all 0.3s cubic-bezier(1, -0.5, 0.1, 1.5);
           margin-bottom: -45px;
           pointer-events: none;
         }
