--- a/public/Mail.html
+++ b/public/Mail.html
@@ -73,7 +73,7 @@
   </div>
 
   <script type="module">
-    import { readData, getAuthor, decrypt } from './module.js'
+    import { readData, getAuthor, decrypt } from './src/js/module/module.mjs'
 
     const url = window.location.search
     var param = url.replace(/&amp;/g, '&').replace(/%20/g, ' ').slice(1).split('&')
