--- a/public/envelope/index.html
+++ b/public/envelope/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
   <link rel="icon" href="../asset/favico.png" type="image/png">
   <link rel="icon" href="../asset/favico.svg" type="image/svg+xml">
 </head>
+
 <body>
   <div class="acc-container">
     <div class="menu-wrapper">
@@ -41,10 +43,11 @@
 
   <div class="mail-wrapper">
     <div class="no-envelope">
-      You haven't get a single mail :<
+      You haven't get a single mail :< </div>
     </div>
-  </div>
 
-  <script type="module" src="../src/js/lib/envelope.js"></script>
+    <script type="module" src="../src/js/lib/envelope.js"></script>
 </body>
+
 </html>
+
