--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
   <link rel="icon" href="./asset/favico.svg" type="image/svg+xml">
   <link rel="stylesheet" href="./src/css/landing.css">
   <link rel="stylesheet" href="./src/css/nav.css">
+  <theme content="1"></theme>
 </head>
 <body>
+  <div class="wht">
+    <div class="new"></div>
+  </div>
   <div class="acc-container">
     <div class="menu-wrapper">
       <div id="friend">
@@ -71,6 +75,10 @@
       </div>
     </div>
   </div>
+
+  <!-- <div id="share-wrapper">
+    
+  </div> -->
 
   <!-- #ab223b -->
 
