--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -4,186 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
-  <link rel="icon" href="../asset/favico_mf9_icon.ico" type="image/x-icon">
-  <link rel="icon" href="../asset/favico.png" type="image/png">
-  <link rel="icon" href="../asset/favico.svg" type="image/svg+xml">
+  <link rel="icon" href="./asset/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./asset/favicon/favicon.png" type="image/png">
+  <link rel="icon" href="./asset/favicon/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="../src/css/particle.css">
-  <style>
-    * {
-      font-family: monospace;
-    }
-
-    body {
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #16161b;
-      height: 100vh;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: fit-content;
-      padding: 50px;
-
-      p {
-        color: white;
-        font-weight: bold;
-        font-size: 30px;
-        margin-top: 0;
-      }
-
-      #signup {
-        display: flex;
-        flex-direction: column-reverse;
-        transition: all 0.3s ease;
-
-        p {
-          color: rgb(192, 192, 192);
-          font-size: 12px;
-          display: flex;
-          flex-direction: column;
-
-          a {
-            color: white;
-            text-decoration: none;
-            font-size: 14px;
-            width: fit-content;
-            transition: all 0.5s ease;
-
-            &:hover {
-              color: lightblue;
-            }
-          }
-        }
-
-        button {
-          width: fit-content;
-          align-self: flex-end;
-          color: white;
-          border: 2px solid white;
-          background-color: transparent;
-          padding: 3px 25px;
-          cursor: pointer;
-          position: relative;
-          overflow: hidden;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          transition-delay: 300ms;
-          transition: all 0.3s ease;
-        }
-        button::before {
-          content: '';
-          background-color: white;
-          position: absolute;
-          height: 100%;
-          width: 100%;
-          display: block;
-          top: 0;
-          left: 0;
-          z-index: -1;
-
-        }
-        button::after {
-          content: '';
-          background-color: #16161b;
-          position: absolute;
-          height: 1000%;
-          width: 100%;
-          display: block;
-          z-index: -1;
-          transition: all 0.3s ease;
-          transform: rotateZ(-45deg);
-        }
-        button:hover {
-          color: #16161b;
-        }
-        button:hover::after {
-          height: 0%;
-        }
-
-        input {
-          padding-bottom: 10px;
-          height: auto;
-          background-color: transparent;
-          border: none;
-          border-bottom: 2px solid white;
-          color: white;
-          transition: all 0.3s ease;
-          margin: 20px 0;
-          
-          &:focus {
-            outline: none;
-          }
-        }
-
-        label {
-          width: fit-content;
-          margin-top: 8px;
-          font-size: 18px;
-          color: white;
-          background-color: transparent;
-          border: none;
-          font-weight: bold;
-          transition: all 0.3s cubic-bezier(1, -0.5, 0.1, 1.5);
-          margin-bottom: -45px;
-          pointer-events: none;
-          user-select: none;
-        }
-      }
-
-      #username {
-        &:focus ~ .label1 {
-          letter-spacing: 5px;
-          margin-bottom: 0;
-          font-size: 30px;
-        }
-        &:placeholder-shown ~ .label1 {
-          color: white;
-        }
-        &:not(:placeholder-shown) ~ .label1 {
-          color: lime;
-          margin-bottom: 0;
-          font-size: 30px;
-        }
-      }
-      #password {
-        &:focus ~ .label2 {
-          letter-spacing: 5px;
-          margin-bottom: 0;
-          font-size: 30px;
-        }
-        &:placeholder-shown ~ .label2 {
-          color: white;
-        }
-        &:not(:placeholder-shown) ~ .label2 {
-          color: lime;  
-          margin-bottom: 0;
-          font-size: 30px;
-        }
-      }
-      #confirm {
-        &:focus ~ .label3 {
-          letter-spacing: 5px;
-          margin-bottom: 0;
-          font-size: 30px;
-        }
-        &:placeholder-shown ~ .label3 {
-          color: white;
-        }
-        &:not(:placeholder-shown) ~ .label3 {
-          color: lime;  
-          margin-bottom: 0;
-          font-size: 30px;
-        }
-      }
-    }
-
-  </style>
+  <link rel="stylesheet" href="../src/css/auth.css">
 </head>
 <body>
   <div class="container">
@@ -201,63 +26,6 @@
   </div>
   <div id="particle"></div>
 
-  <script type="module">
-    import { signup } from '../src/js/module/module.mjs';
-    import { addCircle, particle } from '../src/js/lib/particle.js';
-
-    const form = document.getElementById('signup');
-    const lUsername = document.querySelector('.label1');
-    const lPassword = document.querySelector('.label2');
-    const lConfirm = document.querySelector('.label3');
-
-    document.addEventListener('DOMContentLoaded', () => {
-
-
-      responsive();
-      addCircle();
-
-      window.addEventListener('resize', responsive);
-      form.addEventListener('submit', signupacc);
-      window.addEventListener('mousemove', particle);
-    });
-
-    async function signupacc(event) {
-      event.preventDefault()
-
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-      const confirm = document.getElementById('confirm').value;
-
-      try {
-        if (password == confirm && username && password && confirm) {
-          const register = await signup(
-            username,
-            password
-          )
-        } else {
-          lPassword.style.color = 'red';
-          lConfirm.style.color = 'red';
-          if (!(username && password && confirm)) {
-            lUsername.style.color = 'red';
-          }
-
-          setTimeout(() => {
-            lPassword.removeAttribute('style');
-            lConfirm.removeAttribute('style');
-            lUsername.removeAttribute('style');
-          }, 3000);
-        }
-      } catch (error) {
-        console.error('Error:', error);
-      }
-    }
-
-    function responsive() {
-      var form = document.querySelector('form');
-      var scale = window.innerWidth * 0.4;
-
-      form.style.width = (scale > 280 ? scale : 280) + 'px'
-    }
-  </script>
+  <script type="module" src="../src/js/lib/auth.js"></script>
 </body>
 </html>
