--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Page Not Found</title>
+    <link rel="icon" href="./asset/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./asset/favicon/favicon.png" type="image/png">
+    <link rel="icon" href="./asset/favicon/favicon.svg" type="image/svg+xml">
 
     <style media="screen">
       * {
@@ -30,6 +33,7 @@
       h2 {
         margin: 0;
         font-size: 15vw;
+        color: rgb(190, 80, 80);
       }
       h1, h3 {
         margin-bottom: 0;
