--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="icon" href="./asset/favicon/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="./asset/favicon/favicon.png" type="image/png">
-  <link rel="icon" href="./asset/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="../asset/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../asset/favicon/favicon.png" type="image/png">
+  <link rel="icon" href="../asset/favicon/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="../src/css/particle.css">
   <link rel="stylesheet" href="../src/css/auth.css">
 </head>
