--- a/public/old-index.html
+++ b/public/old-index.html
@@ -82,6 +82,6 @@
 
   <!-- #ab223b -->
 
-  <script type="module" src="./src/js/lib/script.js"></script>
+  <script type="module" src="./src/js/lib/index.js"></script>
 </body>
 </html>
